crates/biome_cli/tests/snapshots/main_cases_overrides_organize_imports/does_handle_included_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "files": {
    "ignore": ["test.js", "special/**"]
  },
  "overrides": [{ "include": ["special/**"] }]
}
```

## `special/test2.js`

```js
import { bar, foom, lorem } from "foo";
import * as something from "../something";
```

## `test.js`

```js
import * as something from "../something";
import { lorem, foom, bar } from "foo";
```

# Emitted Messages

```block
Fixed 1 file(s) in <TIME>
```


