crates/biome_cli/tests/snapshots/main_cases_overrides_organize_imports/does_not_handle_ignored_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "files": {
    "include": ["test.js", "special/**"]
  },
  "overrides": [{ "ignore": ["special/**"] }]
}
```

## `special/test2.js`

```js
import * as something from "../something";
import { lorem, foom, bar } from "foo";
```

## `test.js`

```js
import { bar, foom, lorem } from "foo";
import * as something from "../something";
```

# Emitted Messages

```block
Fixed 1 file(s) in <TIME>
```


